# nvim

./: .gitignore  Cargo.toml  init.lua  lazy-lock.json  update.cmd  update.sh
api/: Cargo.toml
api/src/: buffer.rs  builtin_fn.rs  func.rs  lib.rs  util.rs
comment/: Cargo.toml
comment/src/: config.rs  lib.rs
crates/: Cargo.toml
crates/src/: lib.rs
lsp/: rust_analyzer.lua
lua/: comment.lua  settings.lua  update.lua
lua/comment/: init.lua
lua/config/: lsp.lua
lua/outdated/comment/: config.lua  init.lua
lua/plugins/: blink-cmp.lua  lualine.lua  neo-tree.lua  nui.lua  nvim-treesitter.lua  telescope.lua  theme.lua
plugin/: Cargo.toml
plugin/src/: lib.rs
plugins/: Cargo.toml
plugins/comment/: Cargo.toml
plugins/comment/src/: lib.rs
plugins/crates/: Cargo.toml
plugins/crates/src/: lib.rs
plugins/project/: Cargo.toml
plugins/project/src/: lib.rs  v1.rs  v3.rs
plugins/session/: Cargo.toml
plugins/session/src/: lib.rs
plugins/src/: lib.rs
src/: lib.rs
