[package]
name = "nvim-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
comment = { workspace = true }
plugin = { workspace = true }
mlua = { workspace = true }
nvim-oxi = { workspace = true }
once_cell = { workspace = true }

[workspace]
resolver = "2"
members = ["api", "plugin", "plugins/comment", "plugins/crates"]

[workspace.dependencies]
# local
api = { path = "./api" }
plugin = { path = "./plugin" }
comment = { path = "./plugins/comment" }
crates = { path = "./plugins/crates" }
# crate
mlua = { version = "0.10.5", features = ["luajit", "module"] }
nvim-oxi = { version = "0.6.0", features = ["neovim-0-11"] }
once_cell = "1.21.3"
