[package]
name = "nvim-lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
comment = { workspace = true }
plugin = { workspace = true }
project = { workspace = true }
mlua = { workspace = true }
session = { workspace = true }

[workspace]
resolver = "2"
members = ["api", "plugin", "plugins/comment", "plugins/crates", "plugins/project", "plugins/session"]

[workspace.dependencies]
# local
api = { path = "./api" }
plugin = { path = "./plugin" }
comment = { path = "./plugins/comment" }
crates = { path = "./plugins/crates" }
project = { path = "./plugins/project" }
session = { path = "./plugins/session" }
# crate
mlua = { version = "0.10.5", features = ["luajit", "module", "serialize", "async"] }
nvim-oxi = { version = "0.6.0", features = ["neovim-0-11", "mlua"] }
once_cell = "1.21.3"
rand = "0.9.1"
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
